--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <h1>Fun With JS!</h1>
+        <h1>Simple Slider</h1>
 
-        <p class="lede">Chronicles of my JS adventures</p>
+        <p class="lede">Simple responsive slider</p>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
